# vbgw

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
.cache/clangd/index/: SileroVad.cpp.8F7964E92BC49AED.idx  SileroVad.h.9DBB45CB0AEEF5A8.idx  VoicebotAccount.cpp.B6EFA9DB5817B1A0.idx  VoicebotAccount.h.D876F23E07DAEE4B.idx  VoicebotAiClient.cpp.0175DC5F1297F6E4.idx  VoicebotAiClient.h.A5DDB2D3888C3675.idx  VoicebotCall.cpp.D9B50BB8CED1AA2D.idx  VoicebotCall.h.45881163B75E250F.idx  VoicebotEndpoint.cpp.7696CA2B6A8E1BA5.idx  VoicebotEndpoint.h.8F0802F91652FBFC.idx  VoicebotMediaPort.cpp.636D94DC03CE1895.idx  VoicebotMediaPort.h.AF465C6D7F0CFFF8.idx  main.cpp.C703694B204ABCA0.idx
docs/: api_spec.md  architecture.md  optimization_roadmap.md  testing.md  troubleshooting.md
history/: development_history.md
protos/: voicebot.proto
src/: main.cpp
src/ai/: SileroVad.cpp  SileroVad.h  VoicebotAiClient.cpp  VoicebotAiClient.h
src/api/: HttpServer.cpp  HttpServer.h
src/emulator/: emulator.py  mock_server.py
src/engine/: SessionManager.h  VoicebotAccount.cpp  VoicebotAccount.h  VoicebotCall.cpp  VoicebotCall.h  VoicebotEndpoint.cpp  VoicebotEndpoint.h  VoicebotMediaPort.cpp  VoicebotMediaPort.h
src/utils/: AppConfig.h  RingBuffer.h
